added login screen

--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,21 @@
   	<maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.creatingskies.game</groupId>
+  		<artifactId>game-config</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.creatingskies.game</groupId>
+  		<artifactId>game-editor</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.creatingskies.game</groupId>
+  		<artifactId>game-model</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
