--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 			<version>9.3-1100-jdbc41</version>
 		</dependency>
 		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
 			<groupId>com.creatingskies.game</groupId>
 			<artifactId>game-model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
