--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+				
+		<dependency>
 			<groupId>com.creatingskies.game</groupId>
 			<artifactId>game-model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
