--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-				
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 		<dependency>
 			<groupId>com.creatingskies.game</groupId>
 			<artifactId>game-model</artifactId>
