--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,60 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>unpack-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<excludeScope>system</excludeScope>
+							<outputDirectory>${project.build.directory}/classes</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<id>package-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>${env.JAVA_HOME}/bin/javapackager</executable>
+							<arguments>
+								<argument>-createjar</argument>
+								<argument>-nocss2bin</argument>
+								<argument>-appclass</argument>
+								<argument>com.creatingskies.game.startup.Main</argument>
+								<argument>-srcdir</argument>
+								<argument>${project.build.directory}/classes</argument>
+								<argument>-outdir</argument>
+								<argument>.</argument>
+								<argument>-outdir</argument>
+								<argument>${project.build.directory}</argument>
+								<argument>-outfile</argument>
+								<argument>GameEditor</argument>
+								<argument>-v</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
